--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <li class="nav-item">
                 <a href="#" link="#balanceGeneral" class="nav-link"> Balance General </a>
             </li>
+            <li class="nav-item">
+                <a href="#" link="#estadoDeResultado" class="nav-link"> Estado de Resultado </a>
+            </li>
         </div>
     </nav>
 
