Asiento contable ejemplo 1

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             <li class="nav-item">
                 <a href="#" link="#estadoDeResultado" class="nav-link"> Estado de Resultado </a>
             </li>
+
+            <li class="nav-item">
+                <a href="#" link="#asientoContable1" class="nav-link"> asientoContable1 </a>
+            </li>
+            
         </div>
     </nav>
 
