--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             <li class="nav-item">
                 <a href="#" link="#asientoContable1" class="nav-link"> asientoContable1 </a>
             </li>
-            
+            <li class="nav-item">
+                <a href="#" link="#asientoContable2" class="nav-link"> asientoContable2 </a>
+            </li>
+
         </div>
     </nav>
 
